Fix Task_001_TopBar - content align

--- a/src/components/layout/TopBar/TopBar.module.scss
+++ b/src/components/layout/TopBar/TopBar.module.scss
@@ -8,6 +8,9 @@
     font-family: $primary-font;
     font-size: $top-bar;
     font-weight: 900;
+    align-items: center;
+    background-color: $background-color-11;
+    margin-bottom: 25px;
 
     .temperature {
       display: flex;
@@ -21,6 +24,8 @@
     .topMenu {
       display: flex;
       flex: 5;
+      justify-content: space-around;
+      text-align: center;
     }
 
     .topBarSocialList {
